--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "peerDependecies": {
         "laravel-mix": "^2.0.0"
     },
-    "devDependencies": {
+    "dependencies": {
         "favicons-webpack-plugin": "^4.2.0",
         "html-webpack-plugin": "^4.3.0"
     },
