--- a/package.json
+++ b/package.json
@@ -9,10 +9,6 @@
         "type": "git",
         "url": "https://github.com/aschanMarcus/laravel-mix-webapp.git"
     },
-    "dependencies": {
-        "favicons-webpack-plugin": "^5.0.2",
-        "html-webpack-plugin": "^5.3.1"
-    },
     "peerDependecies": {
         "laravel-mix": "^6.0.10"
     },
@@ -20,5 +16,9 @@
         "laravel",
         "mix",
         "webpack"
-    ]
+    ],
+    "devDependencies": {
+        "favicons-webpack-plugin": "^6.0.0-alpha.1",
+        "html-webpack-plugin": "^5.5.0"
+    }
 }
